[package]
name = "encoder_v3"
version = "0.2.0"
edition = "2021"
authors = ["flamion <flamion@protonmail.com>"]
description = "Small program to quickly encrypt and decrypt files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

rand = "0.8.5"

tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
tracing-core = "0.1.26"


[dependencies.clap]
version = "3.1.6"
features = [ "derive", "wrap_help"]
